zh-cn/15.7/user/special-char.rst
======
特殊字符
======

以下字符在搜索词中作为特殊字符处理。当要将这些字符作为搜索字符使用时,需要进行转义。例如,搜索词中包含 URL 或文件路径里的"/"":",或程序代码中的"+"、"-"等符号时,如果直接搜索而不加转义,可能会得到意料之外的搜索结果。转义方法请参见下文。

::

    + - && || ! ( ) { } [ ] ^ " ~ * ? : \ /

特殊字符一览
------------

.. list-table::
   :header-rows: 1

   * - 特殊字符
     - 含义
     - 相关页面
   * - ``+`` ``-``
     - 指定必需词与排除词(AND 检索 / NOT 检索)
     - :doc:`search-and` / :doc:`search-not`
   * - ``&&`` ``||``
     - AND 检索 / OR 检索
     - :doc:`search-and` / :doc:`search-or`
   * - ``!``
     - NOT 检索(排除检索)
     - :doc:`search-not`
   * - ``( )``
     - 对检索条件进行分组
     - :doc:`advanced-search`
   * - ``[ ]`` ``{ }``
     - 范围指定检索(``[ ]`` 包含边界值,``{ }`` 不包含边界值)
     - :doc:`search-range`
   * - ``^``
     - 提升检索(加权检索)
     - :doc:`search-boost`
   * - ``"``
     - 短语检索(将引号内的内容作为一个整体检索词处理,也可代替转义使用)
     - :doc:`advanced-search`
   * - ``~``
     - 模糊检索
     - :doc:`search-fuzzy`
   * - ``*`` ``?``
     - 通配符检索
     - :doc:`search-wildcard`
   * - ``:``
     - 指定检索字段
     - :doc:`search-field`
   * - ``\``
     - 转义字符
     - (本页面)
   * - ``/``
     - 斜杠(包含在 URL 等中时需要转义)
     - :doc:`search-field`


使用方法
------

使用 \ 进行转义,或用 " 将搜索词括起来输入。

::

    aaa\/bbb
    "aaa/bbb"

例如,要将"C++"作为搜索词进行检索时,可以按如下方式转义。

::

    C\+\+
    "C++"

相关主题
------------

- :doc:`search-field` - 字段指定检索
- :doc:`search-wildcard` - 通配符检索
- :doc:`search-fuzzy` - 模糊检索
- :doc:`advanced-search` - 高级检索
